@@ -1,56 +1,0 @@
-vtun
-openssl
-less
-quagga
-snmpd
-ethtool
-ethstatus
-arptables
-iptraf
-iperf
-openvpn
-stunnel
-openswan
-
-gpsd
-gpsd-clients
-ntp
-
-#lighttpd
-#php5-cgi
-
-wireless-tools
-tcpdump
-netperf
-wavemon
-aircrack-ng
-apt-utils
-usbutils
-
-awds
-batmand
-batctl
-#batman-adv-battool
-
-#zaptel
-#zaptel-firmware
-
-dahdi
-dahdi-linux
-dahdi-firmware
-
-asterisk
-asterisk-h323
-asterisk-gui
-
-flashybrid
-
-#libmisdnuser0
-#dahdi-modules-2.6.30-voyage
-#batman-adv-modules-2.6.30-voyage
-#batmand-gateway-modules
-#lirc-modules-2.6.30-voyage
-
-#olsrd
-#olsrd-plugins
-
